package main.body.exporter;

public interface IExportStrategy {
    void exportJson(String json);
}
