package main.state;

public interface ISubscriber
{
    void update();
}
